# energy-data-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.airflow  Dockerfile.dbt  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: energy_daily_incremental_pipeline.py  energy_dbt_build_databricks.py  energy_ingestion_daily.py  energy_raw_backfill_s3.py
databricks/notebooks/: 01_bronze_ree_balance_electrico.py  02_bronze_aemet_climatologia_diaria.py  03_silver_generacion_energia_diaria.py  04_silver_climatologia_diaria.py  05_gold_mart_energia_clima_diario.py  06_gold_dim_fecha.py  07_full_refresh_ree_bronze_silver.py  08_full_refresh_aemet_bronze_silver.py  09_incremental_ree_bronze_silver.py  10_incremental_aemet_bronze_silver.py
dbt/: .user.yml
dbt/ci/: .user.yml  profiles.yml
dbt/energy_platform/: dbt_project.yml
dbt/energy_platform/tests/: assert_generacion_pura_consistente.sql  assert_porcentaje_renovable_rango_valido.sql
docs/: integracion-continua.md  pipeline-operativo.md
infra/terraform/: locals.tf  main.tf  outputs.tf  variables.tf
src/energy_pipeline/extract/: aemet.py  dates.py  errors.py  http.py  ree.py
src/energy_pipeline/ingest/: __init__.py  aemet.py  backfill.py  config.py  incremental.py  ree.py
tests/extract/: test_aemet.py  test_dates.py  test_http.py  test_ree.py
tests/ingest/: test_backfill.py  test_config.py  test_incremental.py  test_ingest_aemet.py  test_ingest_ree.py
tests/storage/: test_factory.py  test_raw.py  test_s3.py
(+12 files in other folders)
